--- a/404.html
+++ b/404.html
@@ -4,19 +4,19 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
 <link rel="stylesheet" href="/_nuxt/entry.BBRLYrVg.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DAH28oNI.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CrZEnFpO.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.BJZj6Ewc.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BGGGSsCc.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DASKxhJV.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BqGW52Uv.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/08x6i5Dz.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.BJkSn6RI.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/At7M2001.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CVk3RNv_.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C8IQg7wM.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BQfFkHgH.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.TOCKLquH.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BDC0rN02.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/FaXUXnYQ.js">
 <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="/assets/img/favicon/favicon.svg">
 <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
 <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
-<script type="module" src="/_nuxt/DAH28oNI.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1754955519779,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"3fd7ea47-b1ad-431c-8ff4-204b2524bb5a",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/CrZEnFpO.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1754966478494,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"d3d5ec33-dc33-45a5-bad7-2371a1874ec8",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
