--- a/create-my-logo/index.html
+++ b/create-my-logo/index.html
@@ -3,20 +3,20 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
-<link rel="stylesheet" href="/_nuxt/entry.B5-ClhgC.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CMAo1Oy6.js">
+<link rel="stylesheet" href="/_nuxt/entry.B3mDSBJG.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CuzdBCkK.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.BJZj6Ewc.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Db7phN_o.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DvsjTIK0.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DoVFBryT.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/B_bw7WdP.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.BJkSn6RI.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BnM3tF1_.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BOArsicF.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C6Ngcrb1.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DZjSEnWh.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.TOCKLquH.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/esVS42t5.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DJ6FmsFt.js">
 <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="/assets/img/favicon/favicon.svg">
 <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
 <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
-<script type="module" src="/_nuxt/CMAo1Oy6.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1755301506961,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"d71ddc12-1174-4e19-839c-57d4cdd48536",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/CuzdBCkK.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1755302087577,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"f7d09249-03cd-4a66-9f70-5da297906083",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
