--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
 <link rel="stylesheet" href="/_nuxt/entry.B3mDSBJG.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CuzdBCkK.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/mhijGLQO.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.BJZj6Ewc.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DoVFBryT.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B_bw7WdP.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/OZKzQvAy.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/zXtomGaE.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.BJkSn6RI.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/C6Ngcrb1.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DZjSEnWh.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C5U02wUn.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/B7t8F9Rx.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.TOCKLquH.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DJ6FmsFt.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CgspK6R2.js">
 <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="/assets/img/favicon/favicon.svg">
 <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
 <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
-<script type="module" src="/_nuxt/CuzdBCkK.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1755302087578,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"f7d09249-03cd-4a66-9f70-5da297906083",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/mhijGLQO.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1755307899082,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"dd784a6c-bd3a-48df-8836-d8c61d97e2f9",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
