--- a/create-my-logo/index.html
+++ b/create-my-logo/index.html
@@ -4,19 +4,19 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
 <link rel="stylesheet" href="/_nuxt/entry.D1HbmWAG.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/RgaEcGo-.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BEoIk7bv.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.BJZj6Ewc.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CFpiGf1q.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DNuFVbHz.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DhfgHEuc.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bf_IKTIO.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.BJkSn6RI.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B4txJHQn.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DUQxpS9F.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/B16zoSxK.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bn3QC-W7.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.TOCKLquH.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/GhJV4oXJ.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/urT3Gc59.js">
 <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="/assets/img/favicon/favicon.svg">
 <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
 <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
-<script type="module" src="/_nuxt/RgaEcGo-.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1757272516175,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"6275fd3b-52aa-4db7-b6cd-b1fef020c513",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/BEoIk7bv.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1757799180079,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"b83192d4-7965-442c-a194-1c1092d9241c",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
