--- a/404.html
+++ b/404.html
@@ -3,20 +3,22 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
-<link rel="stylesheet" href="/_nuxt/entry.D1HbmWAG.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BEoIk7bv.js">
-<link rel="prefetch" as="style" crossorigin href="/_nuxt/default.BJZj6Ewc.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DhfgHEuc.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bf_IKTIO.js">
+<link rel="stylesheet" href="/_nuxt/entry.CZs0k3dH.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Dp84NIbv.js">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/default.BuL3rbCw.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/d6ZBEeCt.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DiZ31-VG.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CLL0vixW.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/mz_tpYlG.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.BJkSn6RI.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B16zoSxK.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bn3QC-W7.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DciSDCdk.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/B8Dsr_-K.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.TOCKLquH.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/urT3Gc59.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DwAKJuL4.js">
 <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="/assets/img/favicon/favicon.svg">
 <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
 <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
-<script type="module" src="/_nuxt/BEoIk7bv.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1757799180079,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"b83192d4-7965-442c-a194-1c1092d9241c",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/Dp84NIbv.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1760905130100,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"d21cf36a-6c66-4690-994d-093f1b475971",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
